--- a/css/agency.css
+++ b/css/agency.css
@@ -3,6 +3,8 @@
  * Copyright 2013-2017 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
+
+ @import url('https://fonts.googleapis.com/css?family=Merriweather+Sans');
 body {
   overflow-x: hidden;
   font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif; }
@@ -158,7 +160,7 @@ h1, h2, h3, h4, h5, h6 {
         padding: 12px 0;
         font-size: 1.25em; } }
 
-header {
+.index-header {
   background-image: url("../img/2.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -434,6 +436,8 @@ section {
 aside.clients img {
   margin: 50px auto; }
 
+ 
+
 section#contact {
   background-color: #222222;
   /*background-image: url("../img/map-image.png");*/
@@ -601,3 +605,58 @@ img::-moz-selection {
 
 body {
   webkit-tap-highlight-color: #fed136; }
+
+  /*About Page*/
+
+
+
+   .about-header {
+  background-image: url("../img/amoha/9.jpg") !important ; 
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+  text-align: center;
+  color: white;
+  height: 60vh;
+  background-position-y: -400px;
+   }
+   #services{
+     padding: 85px 0px !important;
+   }
+
+  .about-us-content{
+    font-family: 'Merriweather Sans', sans-serif;
+    font-weight: 300;
+    line-height: 2.5;
+  }
+
+  .about-section-2{
+    background-image: url("../img/amoha/2.jpg") !important; 
+    background-attachment: fixed;
+    background-size: cover;
+  }
+
+   .parallax{
+      background-image: url("../img/amoha/5.jpg");
+      background-size: cover;
+      background-attachment: fixed;
+      min-height: 400px;
+  }
+  .box-shadow{
+    box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.3);
+  }
+.detailed-callout-container .detailed-callout-box{
+  position: absolute;
+  top:0px;
+  color: #fff !important;
+}
+.h3--blue{
+  color:#0c73a3 !important;
+}
+detailed-callout-box-content{
+  color: #fff;
+}
