--- a/css/agency.css
+++ b/css/agency.css
@@ -124,7 +124,7 @@ h1, h2, h3, h4, h5, h6 {
     padding: 0; }
     #mainNav .container .navbar-brand {
       color: #fed136;
-      font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive; }
+       }
       #mainNav .container .navbar-brand:hover, #mainNav .container .navbar-brand:focus, #mainNav .container .navbar-brand:active, #mainNav .container .navbar-brand.active {
         color: #fec503; }
     #mainNav .container .navbar-nav .nav-item .nav-link {
@@ -627,10 +627,16 @@ body {
    #services{
      padding: 85px 0px !important;
    }
-
+   .about-content{
+    font-family: 'Merriweather Sans', sans-serif;
+    font-weight: 100;
+    font-size: 1.25em;
+    line-height: 2.0; 
+   }
   .about-us-content{
     font-family: 'Merriweather Sans', sans-serif;
     font-weight: 300;
+    font-size: 1.5em;
     line-height: 2.5;
   }
 
@@ -649,10 +655,17 @@ body {
   .box-shadow{
     box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.3);
   }
+  .detailed-callout-box{
+    position: absolute;
+    left:5%;
+    padding: 50px;
+    background: #fff !important;
+  }
 .detailed-callout-container .detailed-callout-box{
   position: absolute;
   top:0px;
   color: #fff !important;
+  background: #fff;
 }
 .h3--blue{
   color:#0c73a3 !important;
