--- a/css/agency.css
+++ b/css/agency.css
@@ -633,6 +633,12 @@ body {
     font-size: 1.25em;
     line-height: 2.0; 
    }
+   .about-us-content i{
+     padding: 0px 10px 20px 10px; 
+     font-weight: 100;
+     font-size: 1em !important;
+     margin-bottom: 20px;
+   }
   .about-us-content{
     font-family: 'Merriweather Sans', sans-serif;
     font-weight: 300;
@@ -651,6 +657,9 @@ body {
       background-size: cover;
       background-attachment: fixed;
       min-height: 400px;
+  }
+  .donate{
+    padding: 70px 20px 0px 20px;
   }
   .box-shadow{
     box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.3);
