--- a/css/agency.css
+++ b/css/agency.css
@@ -185,7 +185,7 @@ h1, h2, h3, h4, h5, h6 {
     header .intro-text .intro-heading {
       font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
       text-transform: uppercase;
-      font-weight: 700;
+      font-weight: 500;
       font-size: 50px;
       line-height: 50px;
       margin-bottom: 25px; }
@@ -203,7 +203,7 @@ h1, h2, h3, h4, h5, h6 {
     header .intro-text .intro-heading {
       font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
       text-transform: uppercase;
-      font-weight: 700;
+      font-weight: 500;
       font-size: 75px;
       line-height: 75px;
       margin-bottom: 50px; } }
@@ -212,6 +212,7 @@ section {
   padding: 100px 0; }
   section h2.section-heading {
     font-size: 40px;
+    font-weight: 200 !important;
     margin-top: 0;
     margin-bottom: 15px; }
   section h3.section-subheading {
@@ -228,6 +229,7 @@ section {
 
 .service-heading {
   margin: 15px 0;
+  font-weight: 200 !important;
   text-transform: none; }
 
 #portfolio .portfolio-item {
@@ -271,6 +273,7 @@ section {
     padding: 25px; }
     #portfolio .portfolio-item .portfolio-caption h4 {
       text-transform: none;
+      font-weight: 200 !important;
       margin: 0; }
     #portfolio .portfolio-item .portfolio-caption p {
       font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -660,6 +663,15 @@ body {
   }
   .donate{
     padding: 70px 20px 0px 20px;
+  }
+  #donate{
+    padding: 100px 20px !important 
+  }
+  .donate-heading{
+    padding-bottom:50px;
+  }
+  .donate-heading .section-heading{
+    font-weight: 100 !important;
   }
   .box-shadow{
     box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.3);
